RESOLVED FIXED190371
[iOS] Ignore some deprecated declarations
https://bugs.webkit.org/show_bug.cgi?id=190371
Summary [iOS] Ignore some deprecated declarations
Daniel Bates
Reported 2018-10-08 14:19:14 PDT
Ignore some deprecated declarations when building with a newer iOS SDK.
Attachments
Patch (7.92 KB, patch)
2018-10-08 14:20 PDT, Daniel Bates
mitz: review+
Daniel Bates
Comment 1 2018-10-08 14:20:52 PDT
mitz
Comment 2 2018-10-08 15:18:44 PDT
Comment on attachment 351814 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=351814&action=review rs=me > Source/WebKit/UIProcess/ios/WKActionSheet.mm:55 > +#pragma clang diagnostic push > +#pragma clang diagnostic ignored "-Wdeprecated-declarations" Please use the ALLOW_DEPRECATED_DECLARATIONS_{BEGIN,END} macros instead.
Daniel Bates
Comment 3 2018-10-09 14:29:40 PDT
Radar WebKit Bug Importer
Comment 4 2018-10-09 14:30:32 PDT
Note You need to log in before you can comment on or make changes to this bug.