[iOS] Ignore some deprecated declarations https://bugs.webkit.org/show_bug.cgi?id=190371

Reviewed by Dan Bernstein.

* UIProcess/ios/WKActionSheet.mm:
(-[WKActionSheet init]):
(-[WKActionSheet presentSheet:]):
* UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant presentSheet]):
* UIProcess/ios/WKContentViewInteraction.mm:
* UIProcess/ios/forms/WKFormSelectPicker.mm:
(-[WKMultipleSelectPicker initWithView:]):
* UIProcess/ios/forms/WKFormSelectPopover.mm:
(-[WKSelectTableViewController initWithView:hasGroups:]):

Canonical link: https://commits.webkit.org/205362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236981 268f45cc-cd09-0410-ab3c-d52691b4dbfc